--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,8 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: apt update
-      - run: apt install libayatana-appindicator3-dev -y
+      - run: apt-get update
+      - run: apt-get install libayatana-appindicator3-dev -y
       - uses: actions/setup-go@v4
         with:
           go-version: '1.24'
