--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,12 +4,17 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     container:
-      image: ubuntu:22.04
+      image: ubuntu:24.04
       options: --user root
     steps:
-      - uses: actions/checkout@v4
-      - run: apt-get update
-      - run: apt-get install libayatana-appindicator3-dev -y
+      - name: Install dependencies
+        run: |
+          apt-get update
+          apt-get install -y libayatana-appindicator3-dev tzdata nodejs npm 
+        env:
+          DEBIAN_FRONTEND: noninteractive
+      - run: apt-get install libayatana-appindicator3-dev tzdata -y
+      - uses: actions/checkout@v4 
       - uses: actions/setup-go@v4
         with:
           go-version: '1.24'
