--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,4 +22,4 @@ jobs:
       - uses: golangci/golangci-lint-action@v8
         with:
           version: v2.1
-      - run: golangci-lint run ./...
+      - run: golangci-lint run --buildvcs=false ./...
