--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           go-version: '1.24'
       - run: go version
-      - uses: golangci/golangci-lint-action@v4
-        with:
-          version: v1.54.2
-          args: --buildvcs=false ./...
+      - name: Install golangci-lint v1.55.2
+        run: |
+          curl -sSfL https://github.com/golangci/golangci-lint/releases/download/v1.55.2/golangci-lint-1.55.2-linux-amd64.tar.gz | tar -xz
+          mv golangci-lint-1.55.2-linux-amd64/golangci-lint /usr/local/bin/ 
